Add Docker deployment configuration with PostgreSQL and comprehensive deployment guide

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,21 @@
-# Database Configuration
+# Database Configuration (PostgreSQL for Docker)
+DB_HOST=postgres
+DB_PORT=5432
+DB_NAME=travel_db
+DB_USER=postgres
+DB_PASSWORD=postgres
+
+# Database Configuration (SQL Server - Local/Alternative)
 DB_SERVER=ADMIN\\MSSQLSERVER03
 DB_USERNAME=sa
 DB_PASSWORD=your_database_password_here
 DB_DRIVER=ODBC Driver 18 for SQL Server
 DB_DATABASE=TravelAgentDB
+
+# SQL Server Docker Configuration
+SQL_PASSWORD=YourStrong@Passw0rd
+SQL_PORT=1433
+SQL_EDITION=Express
 
 # Groq API Configuration
 GROQ_API_KEY=your_groq_api_key_here
